# Email_Automation

./: .gitignore  .~lock.email_data.csv#  .~lock.logs.csv#  README.md  Runner.py  automated_email_script.py  checks.py  email_data.csv  experiment.ipynb  logs.csv  logs.xlsx  pyproject.toml  requirements.txt  requirements_dev.txt  test.ipynb
checks/: reports.txt
data/: Niraj.txt  constant.txt  xyz.txt
email_config/: body.txt  config.txt  email_data.csv
email_content/: body.txt  mail_subject.txt
logs/: Scriptlogs.txt  reports.txt
scripts/: automated_email_script.py  checks.py  email_main.py  prechecks.py
security/: app_pass.txt  security.txt  sender_email.txt
